# WOPR

./: .gitignore  CITATION.cff  DATA-RIGHTS.md  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
data/: backtest.yaml  benchmark.yaml  meta.yaml
data/site/: backtest.json  (+8 more)
docs/: data-model.md  deploy.md  method.md  roadmap.md
paper/: references.bib  tocsin-preprint.tex
questions/: 2026-001-eritrea-ethiopia-interstate-violence-resumes-nex.yaml  2026-002-india-pakistan-25-battle-deaths-next-12mo.yaml  2026-003-iran-israel-25-battle-deaths-h2-2026.yaml  2026-004-iran-israel-25-battle-deaths-in-2027.yaml  2026-005-sudan-sb-deaths-10000-in-2027.yaml  2026-006-myanmar-burma-sb-deaths-1000-in-2027.yaml  2026-007-mali-sb-deaths-1000-in-2027.yaml  2026-008-haiti-government-vs-gang-war-continues-sb-1000-i.yaml  2026-009-colombia-os-deaths-100-in-2027.yaml  2026-010-ecuador-sb-deaths-25-in-2027.yaml  2026-011-bangladesh-sb-deaths-25-in-2027.yaml  2026-012-benin-sb-deaths-25-in-2027.yaml  2026-013-tunisia-sb-deaths-25-in-2027.yaml  2026-014-venezuela-guyana-interstate-violence-over-essequ.yaml  2026-015-china-taiwan-25-battle-deaths-between-government.yaml
site/: README.md  astro.config.mjs  package-lock.json  package.json
tests/: test_acled.py  test_baserate.py  test_benchmark.py  test_coup.py  test_cow.py  test_pair.py  test_protocol.py  test_resolve.py  test_rolling.py  test_score.py  test_store.py  test_terminates.py  test_watchfloor.py
tocsin/: __init__.py  __main__.py  _env.py  cli.py  paths.py
wopr/: __init__.py  __main__.py  cli.py  paths.py
(+72 files in other folders)
